--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="C:\Users\kaczu\Desktop\Kodilla\temperature\css\style.css">    
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">    
 </head>
 <body>
     <div>
@@ -18,6 +18,6 @@
     </div>
     <div id="fahrenheit-output"></div>
 
-    <script src="C:\Users\kaczu\Desktop\Kodilla\temperature\js\script.js"></script>   
+    <script src="js/script.js"></script>   
 </body>
 </html>
